<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="tab_itg">ITG</string>
    <string name="tab_ddrex">DDR Extreme</string>

    <string name="app_name">RGSC</string>
    <string name="default_module_name">\???</string>
    <string name="title_module_list">@string/app_name</string> <!-- Temporary assignment to app_name until we figure out how to have a separate launcher label -->
    <string name="title_itg">In the Groove</string>
    <string name="title_ddrex">DDR Extreme</string>
    <string name="title_ddrsn1">DDR Supernova</string>
    <string name="title_ddrsn2">DDR Supernova 2</string>
    <string name="title_iidx">Beatmania IIDX</string>
    <string name="title_popn">Pop\'n Music</string>
    <string name="title_about">About RGSC</string>
    <string name="action_about_app">About RGSC</string>
    <string name="about_screen_header">Rhythm Game\nScore Calculator</string>
    <string name="about_version_label">Version</string>
    <string name="about_version_value">\?</string>
    <string name="about_update_label">Updated</string>
    <string name="about_update_value">\?</string>
    <string name="about_changelog_header1_hint">Version</string>
    <string name="about_changelog_header2_hint">Updated</string>
    <string name="about_changelog_header3_hint">Changes</string>
    <string name="introduction_body">This app calculates a player\'s score in several
        music rhythm games. Simply input your step counts and the relevant score
        information will be displayed.</string>
    <string name="fantastics_hint">Fantastics</string>
    <string name="excellents_hint">Excellents</string>
    <string name="greats_hint">Greats</string>
    <string name="decents_hint">Decents</string>
    <string name="wayoffs_hint">Way Offs</string>
    <string name="misses_hint">Misses</string>
    <string name="holds_hint">Holds</string>
    <string name="totalHolds_hint">Total Holds</string>
    <string name="mines_hint">Mines</string>
    <string name="rolls_hint">Rolls</string>
    <string name="totalRolls_hint">Total Rolls</string>
    <string name="marvellouses_hint">Marvellouses</string>
    <string name="perfects_hint">Perfects</string>
    <string name="goods_hint">Goods</string>
    <string name="boos_hint">Boos</string>
    <string name="cools_hint">Cools</string>
    <string name="jgreats_hint">~Greats</string>
    <string name="bads_hint">Bads</string>
    <string name="poors_hint">Poors</string>
    <string name="score_label_earned_default">Earned</string>
    <string name="score_value_earned_default">0</string>
    <string name="score_label_potential_default">Potential</string>
    <string name="score_value_potential_default">0</string>
    <string name="score_submit_description">Calculate score</string>
    <string name="score_clear_description">Clear entered step counts</string>
    <string name="iidx_score_label_default">EX Score</string>
    <string name="popn_score_label_default">Score</string>
    <string name="error_no_steps">Error: No steps entered</string>
    <string name="error_invalid_holds">Error: Holds > Total Holds</string>
    <string name="error_invalid_rolls">Error: Rolls > Total Rolls</string>
    <string name="action_settings">Settings</string>
    <string name="earned_score_error">-</string>
    <string name="potential_score_error">-</string>
    <string name="button_clear_form">clear score</string>
    <string name="score_value_formatter">%1$s / %2$s (-%3$s)</string>
    <string name="keypad_next_field">Next</string>
    <string name="keypad_clear_score">Clear</string>

</resources>
