<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityStandardPadding"
    android:orientation="vertical"
    tools:context=".Activity_AboutApp" >

    <TextView style="@style/AboutSectionHeader"
        android:text="@string/about_screen_header" />
    
    <LinearLayout style="@style/AboutPackageDetails">

        <LinearLayout style="@style/CalculatedScoreRow">

            <TextView style="@style/EarnedScoreLabel"
                android:id="@+id/versionNumberLabel"
                android:text="@string/about_version_label"/>

            <TextView style="@style/CalculatedScoreValue"
                android:id="@+id/versionNumberValue"
                android:textStyle="italic"
                android:text="@string/about_version_value"/>

        </LinearLayout>

        <LinearLayout style="@style/CalculatedScoreRow">

            <TextView style="@style/EarnedScoreLabel"
                android:id="@+id/updateTimeLabel"
                android:text="@string/about_update_label"/>

            <TextView style="@style/CalculatedScoreValue"
                android:id="@+id/updateTimeValue"
                android:textStyle="italic"
                android:text="@string/about_update_value"/>

        </LinearLayout>
        
    </LinearLayout>
    
    <TableLayout
        android:id="@+id/about_changelog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="2">
        
        <TableRow style="@style/AboutChangelogRow"
            android:id="@+id/about_changelog_headers">

            <TextView style="@style/AboutChangelogHeader"
                android:text="@string/about_changelog_header1_hint"/>

            <TextView style="@style/AboutChangelogHeader"
                android:text="@string/about_changelog_header2_hint"/>

            <TextView style="@style/AboutChangelogHeader"
                android:text="@string/about_changelog_header3_hint"/>
            
        </TableRow>
        
    </TableLayout>

</LinearLayout>
