<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityStandardPadding"
    android:orientation="vertical"
    tools:context=".Activity_Calculator_DDRExtreme" >

    <LinearLayout
        android:id="@+id/score_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/marvellouses_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/marvellouses"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreGradeContainer" >

                <ToggleButton
                    android:id="@+id/courseModeToggle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:onClick="toggleCourseMode" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/perfects_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/perfects"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/holds_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/holds"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/greats_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/greats"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/totalHolds_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/total_holds"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/goods_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/goods"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView style="@style/ScoreEntryDummyElement" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/boos_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/boos"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView style="@style/ScoreEntryDummyElement" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/misses_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/misses"
                    android:nextFocusDown="@id/holds"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreButtonContainer" >

                <ImageButton
                    android:id="@+id/clear_form"
                    android:onClick="clearForm"
                    style="@style/ScoreClearButton" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calculated_score"
        style="@style/CalculatedScoreSection" >

        <LinearLayout style="@style/CalculatedScoreRow" >

            <TextView
                android:id="@+id/earnedScoreLabel"
                style="@style/EarnedScoreLabel" />

            <TextView
                android:id="@+id/earned_score_value"
                style="@style/CalculatedScoreValue" />

        </LinearLayout>

        <LinearLayout style="@style/CalculatedScoreRow" >

            <TextView
                android:id="@+id/potentialScoreLabel"
                style="@style/PotentialScoreLabel" />

            <TextView
                android:id="@+id/potential_score_value"
                style="@style/CalculatedScoreValue" />

        </LinearLayout>

        <LinearLayout style="@style/CalculatedScoreRow" >

            <TextView
                android:id="@+id/score_percent"
                style="@style/CalculatedScorePercent" />

            <TextView
                android:id="@+id/score_grade"
                style="@style/CalculatedScoreGrade" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
