<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityStandardPadding"
    android:orientation="vertical"
    tools:context=".Calculator_PopN">

    <LinearLayout
        android:id="@+id/score_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/cools_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/cools"
                    android:nextFocusDown="@id/greats"
                    style="@style/ScoreEntryField"/>

            </LinearLayout>

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/goods_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/goods"
                    android:nextFocusDown="@id/boos"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/greats_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/greats"
                    android:nextFocusDown="@id/goods"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView
                    android:text="@string/boos_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/boos"
                    android:nextFocusDown="@id/cools"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreGradeContainer" >

                <TextView style="@style/ScoreEntryDummyElement" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreButtonContainer" >

                <ImageButton
                    android:id="@+id/submit"
                    android:onClick="calculateScore"
                    style="@style/ScoreSubmitButton"/>

                <ImageButton
                    android:id="@+id/clearForm"
                    android:onClick="clearForm"
                    style="@style/ScoreClearButton"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calculated_score"
        style="@style/CalculatedScoreSection" >

        <LinearLayout style="@style/CalculatedScoreRow" >

            <TextView
                android:id="@+id/earnedScoreLabel"
                android:text="@string/popn_score_label_default"
                style="@style/ExScoreLabel"/>
            <TextView
                android:id="@+id/earnedScoreValue"
                style="@style/ExScoreValue"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
