<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Calculator_IIDX" >

    <LinearLayout
        android:id="@+id/score_entry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreEntryContainer" >

                <TextView
                    android:text="@string/jgreats_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/jgreats"
                    android:nextFocusDown="@id/greats"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreEntryContainer" >

                <TextView
                    android:text="@string/bads_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/bads"
                    android:nextFocusDown="@+id/poors"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreEntryContainer" >

                <TextView
                    android:text="@string/greats_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/greats"
                    android:nextFocusDown="@id/goods"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreEntryContainer" >

                <TextView
                    android:text="@string/poors_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@id/poors"
                    android:nextFocusDown="@id/jgreats"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/ScoreEntryRow" >

            <LinearLayout style="@style/ScoreEntryContainer" >

                <TextView
                    android:text="@string/goods_hint"
                    style="@style/ScoreEntryLabel" />

                <EditText
                    android:id="@+id/goods"
                    android:nextFocusDown="@id/bads"
                    style="@style/ScoreEntryField" />

            </LinearLayout>

            <LinearLayout style="@style/ScoreButtonContainer" >

                <ImageButton
                    android:id="@+id/submit"
                    android:onClick="calculateScore"
                    style="@style/ScoreSubmitButton"/>

                <ImageButton
                    android:id="@+id/clearForm"
                    android:onClick="clearForm"
                    style="@style/ScoreClearButton"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/calculated_score"
        style="@style/CalculatedScoreSection" >

        <TextView
            android:id="@+id/scoreSectionLabel"
            style="@style/ScoreSectionTitle" />

        <LinearLayout
            android:gravity="center"
            style="@style/CalculatedScoreRow">

            <TextView
                android:id="@+id/earnedScoreLabel"
                android:text="@string/iidx_score_label_default"
                style="@style/EarnedScoreLabel"/>

            <TextView
                android:id="@+id/earnedScoreValue"
                style="@style/CalculatedScoreValue"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            style="@style/CalculatedScoreRow">

            <TextView
                android:id="@+id/scorePercent"
                style="@style/CalculatedScorePercent"/>

            <TextView
                android:id="@+id/scoreGrade"
                style="@style/CalculatedScoreGrade"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>